--- a/automate_run/.gitignore
+++ b/automate_run/.gitignore
@@ -5,7 +5,13 @@
 /automate_run/results/N192_automatic_full_run/*
 /automate_run/results/N192_mpk7_full_run/*
 /automate_run/results/N192_mpk13_full_run/*
+/automate_run/results/N192_noisy_full_run/*
+
 /mdn_idea/*
+
+
+# notebooks
+/*.ipynb
 
 
 # logs
